26 January 2022: George
	- Merge PR #408 from fobser: Prevent a few more yacc clashes.
	- Merge PR #275 from Roland van Rijswijk-Deij: Add feature to return the
	  original instead of a decrementing TTL ('serve-original-ttl')
	- Merge PR #355 from noloader: Make ICANN Update CA and DS Trust Anchor
	  static data.
	- Ignore cache blacklisting when trying to reply with expired data from
	  cache (#394).

22 January 2022: Willem
	- Padding of queries and responses with DNS over TLS as specified in
	  RFC7830 and RFC8467.

22 January 2021: George
	- Fix TTL of SOA record for negative answers (localzone and
	  authzone data) to be the minimum of the SOA TTL and the SOA.MINIMUM.

19 January 2021: Willem
	- Support for RFC5001: DNS Name Server Identifier (NSID) Option
	  with the nsid: option in unbound.conf

18 January 2021: Wouter
	- Fix #404: DNS query with small edns bufsize fail.
	- Fix declaration before statement and signed comparison warning in
	  dns64.

15 January 2021: Wouter
	- Merge #402 from fobser: Implement IPv4-Embedded addresses according
	  to RFC6052.

14 January 2021: Wouter
	- Fix for #93: dynlibmodule import library is named libunbound.dll.a.

13 January 2021: Wouter
	- Merge #399 from xiangbao227: The lock of lruhash table should
	  unlocked after markdel entry.
	- Fix for #93: dynlibmodule link fix for Windows.

12 January 2021: Wouter
	- Fix #397: [Feature request] add new type always_null to local-zone
	  similar to always_nxdomain.
	- Fix so local zone types always_nodata and always_deny can be used
	  from the config file.

8 January 2021: Wouter
	- Merge PR #391 from fhriley: Add start_time to reply callbacks so
	  modules can compute the response time.
	- For #391: use struct timeval* start_time for callback information.
	- For #391: fix indentation.
	- For #391: more double casts in python start time calculation.
	- Add comment documentation.
	- Fix clang analysis warning.

6 January 2021: Wouter